force-app/main/default/objects/Donation__c/Donation__c.object-meta.xml
<CustomObject>
    <description>Donations received by SFTS from individuals, businesses, foundations, etc. Captures amount, type, designation, acknowledgment status. Foundation for fundraising-side tracking, donor pipelines, and 990 prep.</description>
    <label>Donation</label>
    <nameField>
        <displayFormat>DON-{00000}</displayFormat>
        <label>Donation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>