force-app/main/default/objects/Donation__c/fields/Acknowledgment_Sent__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has the tax-deductible donation acknowledgment letter been sent to the donor? Required for donations over $250 per IRS rules.</description>
    <label>Acknowledgment Sent</label>
    <type>Checkbox</type>
</CustomField>