force-app/main/default/objects/Donation__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>USD value of the donation. For in-kind donations, use fair market value at time of receipt.</description>
    <label>Amount</label>
    <precision>16</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>