force-app/main/default/objects/Donation__c/fields/Donation_Date__c.field-meta.xml
<CustomField>
    <fullName>Donation_Date__c</fullName>
    <description>Date the donation was received. Used for 990 prep and fiscal-year reporting.</description>
    <label>Donation Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>