force-app/main/default/objects/Donation__c/fields/Donor__c.field-meta.xml
<CustomField>
    <fullName>Donor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Contact who gave the donation. Individual donors, business representatives, and foundation contacts all live as Contacts.</description>
    <label>Donor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Donations</relationshipLabel>
    <relationshipName>Donations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>