force-app/main/default/objects/Donation__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Any context about the donation: source event, donor circumstances, restrictions, etc.</description>
    <label>Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>