force-app/main/default/objects/Donation__c/validationRules/Amount_Must_Be_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Must_Be_Positive</fullName>
    <active>true</active>
    <description>Prevents accidental zero/negative donation entry.</description>
    <errorConditionFormula>Amount__c &lt;= 0</errorConditionFormula>
    <errorMessage>Donation Amount must be greater than zero. For reversals or refunds, contact your admin.</errorMessage>
</ValidationRule>