force-app/main/default/objects/Donation__c/validationRules/Donation_Date_Not_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Donation_Date_Not_Future</fullName>
    <active>true</active>
    <description>Donations must be recorded as received, not pledged. Pledges go in Notes.</description>
    <errorConditionFormula>Donation_Date__c &gt; TODAY()</errorConditionFormula>
    <errorMessage>Donation Date cannot be in the future. Use the date the donation was actually received.</errorMessage>
</ValidationRule>