force-app/main/default/objects/Donation__c/listViews/This_Year.listView-meta.xml
<ListView>
    <fullName>This_Year</fullName>
    <columns>NAME</columns>
    <columns>Donor__c</columns>
    <columns>Amount__c</columns>
    <columns>Donation_Date__c</columns>
    <columns>Donation_Type__c</columns>
    <columns>Designated_For__c</columns>
    <columns>Acknowledgment_Sent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Donation_Date__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>This Year</label>
</ListView>